--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="calculator-keys">
             <div class="row">
                 <button class="all-clear">AC</button>
-                <button class="operator" value="%">%</button>
+                <button class="percentage">%</button>
                 <button class="operator" value="/">&divide;</button>
             </div>
             <div class="row">
